infra-config/overlays/test/lobiani/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: lobiani
  name: app-lobiani
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - test-lobiani.baybay.dev
      secretName: lobiani-tls
  rules:
    - host: test-lobiani.baybay.dev
      http:
        paths:
          - backend:
              serviceName: lobiani-app
              servicePort: 8080
